<?xml version="1.0"?>
<package>
  <name>human_simple_mov</name>
  <version>0.0.0</version>
  <description>Moving human in morse environment</description>

  <maintainer email="fxj345@cs.bham.ac.uk">Ferdian Jovan</maintainer>
  <maintainer email="marcobecerrap@gmail.com">Marco Becerra</maintainer>

  <license>BSD</license>
  <author email="fxj345@cs.bham.ac.uk">Ferdian Jovan</author>
  <author email="marcobecerrap@gmail.com">Marco Becerra</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
